[project]
name = "callmemaybe"
version = "0.1.0"
description = "This project translates natural-language prompts into structured function calls."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "flake8>=7.3.0",
    "function>=1.2.0",
    "mypy>=1.20.1",
    "pydantic>=2.13.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
